@@ -27,7 +27,7 @@
 	<key>CFBundleExecutable</key>
 	<string>iTerm</string>
 	<key>CFBundleGetInfoString</key>
-	<string>0.9.5.0227</string>
+	<string>0.9.5.0315</string>
 	<key>CFBundleHelpBookFolder</key>
 	<string>iTerm Help</string>
 	<key>CFBundleHelpBookName</key>
@@ -43,7 +43,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>0.9.5.0227</string>
+	<string>0.9.5.0315</string>
 	<key>CFBundleSignature</key>
 	<string>ITRM</string>
 	<key>CFBundleURLTypes</key>
@@ -154,7 +154,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>0.9.5.0227</string>
+	<string>0.9.5.0315</string>
 	<key>NSAppleScriptEnabled</key>
 	<string>YES</string>
 	<key>NSExtensions</key>
