@@ -1,4 +1,13 @@
 <STRONG>Changes since 0.9.5</STRONG><BR><BR>
+Version <STRONG>0.9.5.0315</STRONG> includes the following changes:
+<UL>
+    <LI> Changing font size when in full screen mode now changes row/col numbers correctly (#1671723).</LI>
+    <LI> Enhanced "Font size follow window size" behavior.</LI>
+    <LI> Fixed a selection bug (#1677708).</LI>
+    <LI> Improved Fn key handling (#1676087).</LI>
+    <LI> Improved window cycling behavior (#1676009).</LI>
+</UL>
+
 Version <STRONG>0.9.5.0227</STRONG> includes the following changes:
 <UL>
 	<LI> Fixed a crash that happens when you toggle between the fullscreen and normal modes.</LI>
