@@ -20,9 +20,47 @@
 <TD VALIGN="TOP" BGCOLOR="#FFFFFF">
 <FONT SIZE="5"><STRONG>FAQ</STRONG></FONT><BR>
 <UL>
-<LI><STRONG>Does iTerm require mono-space fonts?</STRONG><BR>
-	Versions before 0.8 require monospace fonts. New version no longer requires monospace 
-	fonts. All fonts will be displayed in correct alignment.<BR><BR></LI>
+<LI><STRONG>Why my arrow/HOME/END keys are not working?</STRONG><BR>
+
+    When the terminal type of your sessions is set to one of those "xterm" types, 
+    iTerm handles the arrow keys, the home key, and the end key in a special way. 
+    The escape sequences generated by these keys depend on if your session is in 
+    the normal mode or the cursor application mode. For the normal mode, iTerm 
+    generates ESC [ sequences. For the cursor application mode, iTerm generates 
+    ESC O sequences.<BR><BR>
+
+    These two modes are respected by many console programs. Most shells are good 
+    with the normal mode. Full screen applications such as vi and emacs usually 
+    use cursor application mode. Termcap and terminfo are written for full screen
+    applications, so they will report the cursor application mode sequences.<BR><BR>
+
+    In any case, if your keys are not working, first check if iTerm is set to 
+    correct terminal type. The terminal type set in the terminal profile should 
+    match the TERM variable in your session environment. Scripts like 
+    bashrc may change the terminal type and create some problem. Secondly, check 
+    if there's any customized key bindings for these keys. These settings will 
+    override the default behavior. And lastly, check if you have set up your 
+    console application correctly. In some system, vi by default works in the 
+    original vi mode, which does not support arrow keys.<BR><BR>
+
+    If everything else fails, you can fire up another terminal program that works
+    for you, check the escape sequences generated by arrow keys in those program, 
+    and go back to iTerm, type these key sequences in your keyboard profile.<BR><BR></LI>
+
+<LI><STRONG>I can't input Chinese/Japanese/Umlauts/Accents, why?</STRONG><BR>
+	First of all, make sure your encoding settings is correct. For example, there
+	are several encoding standards for Chinese, you need to know which one is used on
+	your system. If you are running a local session, unicode is the standard of Mac OS X.<BR><BR>
+	To enable inputing unicode characters in your shell, put this in your ~/.inputrc<BR><BR>
+    
+        set meta-flag on<BR>
+        set input-meta on<BR>
+        set output-meta on<BR>
+        set convert-meta off<BR><BR>
+        
+    If you are running a telnet session, be sure you turned on the 8-bit data path.
+	Try using "telnet -8 yourhost" in your command.<BR><BR></LI>
+ 
 <LI><STRONG>Where does iTerm store its settings?</STRONG><BR>
 	Since version 0.8.0, all the setting is stored in ~/Library/Preferences/iTerm.plist. 
 	In case something goes wrong, you can delete this file and iTerm will generate a new
@@ -39,10 +77,13 @@
 	rate. Fast refreshing rate means more CPU usage, and it might decrease performance when
 	there is a lot of scrolling.<BR><BR></LI>
 <LI><STRONG>My settings of bookmarks do not seem to always work. Why?</STRONG><BR>
-	For various reasons, some settings like numbers of row/col, fonts, etc. are enforced
+	For various reasons, most size settings such as numbers of row/col, fonts, etc. need
 	to be the same among all the tabs within a window. Therefore, only the settings of first
 	tab in the window will be honored. You can however specifiy different terminal types,
 	different colors, etc.<BR><BR></LI>
+<LI><STRONG>Does iTerm require mono-space fonts?</STRONG><BR>
+	Versions before 0.8 require monospace fonts. New version no longer requires monospace 
+	fonts. All fonts will be displayed in correct alignment.<BR><BR></LI>
 <LI><STRONG>The fonts are looking weird. What should I do?</STRONG><BR>
 	iTerm lets you to specify two fonts. If you only use English or western european languages,
 	you probably only need to set the font for ASCII characters. For other languages, you
@@ -55,13 +96,7 @@
 	for details. Set them to 0 gives you a standard anti-alias rendering. Any negative number
 	gives you a bolder look.<BR><BR></LI>
 <LI><STRONG>Characters on screen are not aligned correctly.</STRONG><BR>
-	Check the option for "use double width for Non-ASCII characters.<BR><BR></LI>
-<LI><STRONG>I can't input Chinese/Japanese/Umlauts/Accents, why?</STRONG><BR>
-	First of all, make sure your encoding settings is correct. For example, there
-	are several encoding standards for Chinese, you need to know which one is used on
-	your system. If you are running a local session, unicode is the standard of Mac OS X.
-	Secondly, if you are running a telnet session, be sure you turned on the 8-bit data path.
-	Try using "telnet -8 yourhost" in your command.<BR><BR></LI>
+	Check the option for "use double width for Non-ASCII characters".<BR><BR></LI>
 <LI><STRONG>Can I completely hide the toolbar?</STRONG><BR>
 	Yes, you can. The oblong button on the top right corner of the window does the trick.<BR><BR></LI>
 	
