@@ -2,7 +2,7 @@
 <BR>
 <LI><A HREF="index.shtml">Home</A></LI>
 <LI><A HREF="news.shtml">News</A><IMG src="new.gif"></LI>
-<LI><A HREF="faq.shtml">FAQ</A></LI>
+<LI><A HREF="faq.shtml">FAQ</A><IMG src="new.gif"></LI>
 <LI><A HREF="download.shtml">Download</A><IMG src="new.gif"></LI>
 <LI><A HREF="misc.shtml">Misc</A></LI>
 <LI><A HREF="screenshot.shtml">Screenshots</A></LI>
